<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Info">



        <RelativeLayout
            android:id="@+id/relativeL"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            >
            <ImageView
                android:id="@+id/logod3"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/ic_launcher"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="10dp"></ImageView>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registro_usuario"
                android:gravity="center"
                android:textSize="40dp"
                android:textColor="@color/colorRun"
                android:textStyle="bold"
                android:layout_marginTop="150dp"
                />

            <EditText
                android:layout_below="@id/textView3"
                android:layout_marginTop="10dp"
                android:id="@+id/edit_correo"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:gravity="center"
                android:hint="ejemplo@ejemplo.com"
                android:backgroundTint="@color/colorBlanco"/>

            <EditText
                android:id="@+id/edit_contra"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:ems="10"
                android:inputType="textPassword"
                android:gravity="center"
                android:layout_below="@id/edit_correo"
                android:hint="pass"
                android:backgroundTint="@color/colorBlanco"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_contra"
                android:gravity="center">
                <Button
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/crear_usuario"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:id="@+id/boton_registrarse"
                    android:backgroundTint="@color/colorBlanco"/>
                <Button
                    android:layout_width="180dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/iniciar_sesion"
                    android:textColor="#000000"
                    android:textSize="12dp"
                    android:id="@+id/boton_login"
                    android:backgroundTint="@color/colorBlanco"/>

            </LinearLayout>






        </RelativeLayout>



</LinearLayout>